--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
+    "base64-js": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "child_process": "^1.0.2",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "passport-local-mongoose": "^8.0.0"
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "passport-local-mongoose": "^8.0.0",
+    "tesseract.js": "^5.0.5"
   }
 }
