--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "tesseract.js": "^5.0.5"
   }
