--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
