--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
